--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,8 @@
   --accent: 100 116 139;
 }
 
-body {
-  @apply bg-background text-gray-900;
+@layer base {
+  body {
+    @apply bg-background text-gray-900 font-roboto;
+  }
 } 
